--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title: Working Library
 tagline: ""
-url: https://workinglibrary.github.io/
+url: https://workinglibrary.github.io
 paginate: 1
 baseurl: ""
 permalink: pretty
